Too verbose warning in os::commit_memory_limit() on Windows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • b11
    • windows

      JDK-8364518 introduced suport for Job Objects in os::commit_memory_limit() and included a warning log message if information about a job object could not be queried. This causes a lot of warnings to be printed due to "Access is denied". Some tests are failing on Windows when these warning are printed:
      sun/rmi/runtime/Log/6409194/NoConsoleOutput.java
      java/lang/IO/IO.java
      A number of java/lang/ProcessBuilder/ tests

      Example warning output:
      Java HotSpot(TM) 64-Bit Server VM warning: Attempt to query job object information failed: Access is denied

            Assignee:
            Joel Sikström
            Reporter:
            Joel Sikström
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: