8365050: Too verbose warning in os::commit_memory_limit() on Windows

Merge was muddled up by previously commenting out verbose warning